testsuite/tests/properties/invalid_cast/foo.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- BarNode("example" list_rule)
    list_rule <- ListNode(list+(NumberNode(@number)))
}
